# SolverShell

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  test.sln  test.vcxproj  test.vcxproj.filters
equation/: CMakeLists.txt  sshell.cpp
examples/3DShapeGenerator/: CMakeLists.txt  api.cpp  api.h  shapes.cpp  sshell.cpp
examples/Equation/: CMakeLists.txt  sshell.cpp
src/: CMakeLists.txt  main.cpp  sshell.cpp  sshell_api.cpp  sshell_api.h
src/API/: SOSH_Function.cpp  SOSH_Function.h  SOSH_Manager.cpp  SOSH_Manager.h  SOSH_Parser.cpp  SOSH_Parser.h  SOSH_Shell.cpp  SOSH_Shell.h  SOSH_Token.cpp  SOSH_Token.h  sshell_api.h
test/: CMakeLists.txt  SOSH_Function_Tests.cpp  SOSH_Manager_Tests.cpp  SOSH_Parser_Tests.cpp  SOSH_Shell_Tests.cpp  SOSH_Token_Tests.cpp  SampleFunction_Test.cpp  unit_tests.cpp
